update name to "IO Smart Wallet"  for Android app

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "zerium2",
+  "name": "IO Smart Wallet",
   "author": "Ionic Framework",
   "homepage": "http://ionicframework.com/",
   "private": true,
