update name for Android app

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "IO Smart Wallet",
+  "name": "IO-Smart-Wallet",
   "author": "Ionic Framework",
   "homepage": "http://ionicframework.com/",
   "private": true,
